【底座】优化SysUserServiceImpl的获取登录用户菜单方法，优化性能